--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -6,15 +6,21 @@
       <img class="app-logo" src="/assets/images/place.svg" alt="logo">
       <span class="app-logo-text">Fourwords</span>
       <div class="app-header-search-box">
-        <input class="app-header-search-input" placeholder="Search for any location. e.g. man.fish.horse.shoe">
+        <input class="app-header-search-input" placeholder="Search for any location. e.g. man.fish.horse.shoe" v-model="searchTerm" @@keyup.enter="searchLocation">
       </div>
     </header>
     <div class="app-map-wrapper">
       <gmap-map style="width: 100%; height: 100%; position: absolute; left:0; top:0"
-        :center="{lat: 1.38, lng: 103.8}"
-        :zoom="12"
+        :center="mapCenter"
+        :zoom="7"
         :options="mapOptions"
       >
+        <gmap-marker
+          :position="mapCenter"
+        ></gmap-marker>
+
+        <gmap-polygon :paths="mapPaths" :stroke-width="0.5">
+        </gmap-polygon>
       </gmap-map>
     </div>
   </div>
